syntax = "proto3";
import "ThTCHRootData.proto";
import "ThTCHGeometry.proto";

message ThTCHBuiltElementData {
    ThTCHRootData root = 1;
    
    // geometry size
    double length = 2;
    double width = 3;
    double height = 4;

    // geometry location
    ThTCHPoint3d origin = 5;
    ThTCHVector3d x_vector = 6;

    // geometry profile
    optional ThTCHPolyline outline = 7;
}
